--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header{
     justify-content: space-between;
     align-items: center;
     margin-bottom: 50px;
+    border-bottom: 2px solid red;
 }
 
 .logo-header{
@@ -40,6 +41,7 @@ header{
 .container-box{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 
 }
 
@@ -49,8 +51,14 @@ header{
     border: 1px solid;
     background-color: lightgreen;
     text-align: center;
+    margin: 20px;
 }
 
 .box img{
         width: 100%;
+        margin-bottom: 20px;
+}
+
+.box h2, .box h3, .box p {
+    margin-bottom: 10px;
 }
