--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+ul{
+    list-style-type: none;
+}
+
 body{
     background-color: rgb(101, 100, 100);
 }
@@ -58,7 +62,7 @@ header{
         margin-bottom: 20px;
 }
 
-.box h2, .box h3, .box p {
+.box h2, .box h3, .box li {
     margin-bottom: 10px;
 }
 
