--- a/style.css
+++ b/style.css
@@ -34,14 +34,77 @@ header{
     width: 100%;
 }
 
-.search-bar{
-
+/* barra di ricerca */
+.search-container{
+    background: white;
+    height: 30px;
+    border-radius: 30px;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.8s;
+    box-shadow: 4px 4px 6px 0 rgba(255,255,255,.3),
+                -4px -4px 6px 0 rgba(116,125,136,.2),
+                inset -4px -4px 6px 0 rgba(255,255,255,.2),
+                inset 4px 4px 6px 0 rgba(0,0,0,.2);
 }
 
-#btn-search{
-
+.search-container:hover > .search-input {
+    width: 400px;
 }
 
+.search-input{
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 0px;
+    transition: 0.8s;
+}
+
+.search-input:focus{
+    width: 400px;
+}
+
+.found-btn i{
+    color: red;
+}
+
+@keyframes shaker {
+    0% { transform: skew(0deg,0deg);}
+    25% { transform: skew(5deg,5deg);}
+    75% { transform: skew(-5deg,-5deg);}
+    100% { transform: skew(0deg,0deg);}
+}
+
+.search-container:hover{
+    animation: shaker 0.15s linear 3 ;
+}
+
+/* botton cerca */
+
+#btn-search {
+	box-shadow: 0px 10px 14px -7px #ffffff;
+	background:linear-gradient(to bottom, #fa000d 5%, #f0bbc0 100%);
+	background-color:red;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:white;
+	/* font-family:Arial; */
+	font-size:20px;
+	font-weight:bold;
+	padding:10px 30px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px white;
+}
+#btn-search:hover {
+	background:linear-gradient(to bottom, #f0bbc0 5%, #fa000d 100%);
+	background-color:#f0bbc0;
+}
+
+/* box film */
 .container-box{
     display: flex;
     justify-content: space-around;
