--- a/style.css
+++ b/style.css
@@ -71,10 +71,15 @@ header{
 
 .search-input:focus{
     width: 400px;
+    box-shadow: 0 0 5px rgba(235, 37, 32, 1);
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 1px solid rgba(236, 32, 32, 1);
 }
 
 .found-btn i{
     color: red;
+    padding-left: 10px;
 }
 
 @keyframes shaker {
