--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header{
     outline: none;
     width: 0px;
     transition: 0.8s;
-
+    line-height: 25px;
 }
 
 .search-input:focus{
@@ -94,7 +94,6 @@ header{
 }
 
 /* botton cerca */
-
 #btn-search {
 	box-shadow: 0px 10px 14px -7px #ffffff;
 	background:linear-gradient(to bottom, #fa000d 5%, #f0bbc0 100%);
@@ -110,13 +109,13 @@ header{
 	text-shadow:0px 1px 0px white;
     margin-right: 40px;
 }
+
 #btn-search:hover {
 	background:linear-gradient(to bottom, #f0bbc0 5%, #fa000d 100%);
 	background-color:#f0bbc0;
 }
 
 /* div per messaggi della ricerca */
-
 .title-research{
     text-align: center;
     color: white;
@@ -125,31 +124,91 @@ header{
 }
 
 
-/* box film */
+/* contenitore dei box film */
 .container-box{
     max-width: 1170px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 0 auto;
-
+    transform-style: preserve-3d;
 }
 
-.box{
+.card{
     width: 200px;
     min-height: 400px;
-    border: 1px solid;
     text-align: center;
     margin: 20px;
+    position: relative;
+    transform-style: preserve-3d;
+    perspective: 1000px;
 }
 
-.box img{
-        width: 100%;
-        margin-bottom: 20px;
+.card .box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: 1s ease;
 }
 
-.box h2, .box h3, .box li {
+.card:hover .box{
+    transform: rotateY(180deg);
+}
+
+.card .box .imgBx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 3px solid white;
+    border-radius: 20px;
+}
+
+.card .box .imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.card .box .contentBx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(48 47 47);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
+    transform: rotateY(180deg);
+    border-radius: 20px;
+}
+
+.card .box .contentBx .titleBx{
+    transform-style: preserve-3d;
+    padding: 20px;
+    background: linear-gradient(45deg, rgb(249 2 2), rgb(101, 100, 100));
+    transform: translateZ(100px);
+    border: 2px solid red;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+.card .box h2, .card .box h3, .card .box li {
     margin-bottom: 10px;
+    color: white;
+    font-size: 14px;
 }
 
 #flags{
