--- a/style.css
+++ b/style.css
@@ -14,12 +14,17 @@ ul{
 
 body{
     background-color: rgb(101, 100, 100);
+    background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/85e22987-d2dd-46ca-b8b7-65cd0e31c24a/bd1d3a0b-1ae0-496c-b7b6-747b8bd6eee6/IT-it-20201123-popsignuptwoweeks-perspective_alpha_website_small.jpg");
+
 }
 
+
 #root{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+
 }
+
 
 header{
     height: 150px;
@@ -27,7 +32,7 @@ header{
     justify-content: space-between;
     align-items: center;
     margin-bottom: 50px;
-    border-bottom: 2px solid red;
+    border-bottom: 4px solid red;
     background-color: black;
 }
 
@@ -122,6 +127,9 @@ header{
     color: white;
     margin-top: 20px;
     margin-bottom: 60px;
+    font-size: 25px;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
 
@@ -165,8 +173,11 @@ header{
     left: 0;
     width: 100%;
     height: 100%;
-    border: 3px solid white;
+    border: 5px solid white;
     border-radius: 20px;
+    box-shadow: 0px 0px 10px 6px rgba(255, 255, 255, 0.75);
+    -moz-box-shadow: 0px 0px 10px 6px rgba(255, 255, 255, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 6px rgba(255, 255, 255, 0.75);
 }
 
 .card .box .imgBx img{
