--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     border-bottom: 4px solid red;
     background-color: black;
 }
@@ -98,7 +98,7 @@ header{
 }
 
 .search-container:hover{
-    animation: shaker 0.20s linear 4 ;
+    animation: shaker 0.30s linear 3 ;
 }
 
 /* botton cerca */
@@ -132,6 +132,55 @@ header{
     font-size: 25px;
     font-weight: bold;
     letter-spacing: 1px;
+}
+
+/* drop menu film serie TV */
+
+.choice{
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.choice-film, .choice-tv{
+    margin-left: 20px;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+}
+
+.drop-choice-film, .drop-choice-tv {
+    display: none;
+    position: absolute;
+    width: 150px;
+    height: 100px;
+    background-color: rgb(48 47 47);
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 10px;
+    z-index: 10;
+}
+
+.choice-film:hover .drop-choice-film{
+    display: block;
+}
+
+.choice-tv:hover .drop-choice-tv{
+    display: block;
+}
+
+.drop-choice-film p, .drop-choice-tv p{
+    font-size: 16px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.drop-choice-film p:hover, .drop-choice-tv p:hover{
+    text-decoration: underline;
+    color: red;
 }
 
 
